--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A web-app for commenting on chess games.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
+    "test-coverage": "jest --coverage",
     "gulp": "gulp"
   },
   "repository": {
@@ -22,8 +24,10 @@
   },
   "homepage": "https://github.com/mYstar/chessT#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
+    "jest": "^29.3.1",
     "sass": "^1.56.0"
   }
 }
