--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "jest": "^29.3.1",
+    "jest-expect-message": "^1.1.3",
     "sass": "^1.56.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": ["jest-expect-message"]
   }
 }
