--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "chesst",
   "version": "1.0.0",
   "description": "A web-app for commenting on chess games.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "jest",
     "test-watch": "jest --watchAll",
     "test-coverage": "jest --coverage",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,13 +26,21 @@
   "homepage": "https://github.com/mYstar/chessT#readme",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^5.1.0",
+    "css-loader": "^6.7.3",
     "jest": "^29.3.1",
     "jest-expect-message": "^1.1.3",
-    "sass": "^1.56.0"
+    "sass": "^1.56.0",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "jest": {
-    "setupFilesAfterEnv": ["jest-expect-message"]
+    "setupFilesAfterEnv": [
+      "jest-expect-message"
+    ]
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
