--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "test-watch": "jest --watchAll",
     "test-coverage": "jest --coverage",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "server": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -24,15 +26,18 @@
   },
   "homepage": "https://github.com/mYstar/chessT#readme",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "css-loader": "^6.7.3",
-    "jest": "^29.3.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
     "jest-expect-message": "^1.1.3",
-    "sass": "^1.56.0",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.59.3",
     "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "style-loader": "^3.3.2",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.12.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -40,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "ejs": "^3.1.9",
     "lodash": "^4.17.21"
   }
 }
